devbox/rasa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jl-rasa # {"$kpt-set":"name"}
  namespace: label-bot-dev # {"$kpt-set":"namespace"}
spec:
  ports:
  - name: http-vscode
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: jl-rasa # {"$kpt-set":"name"}
  # Uncomment for statefulset
  #clusterIP: None
