devbox/rasa/virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jl-rasa # {"$kpt-set":"name"}
  namespace: label-bot-dev # {"$kpt-set":"namespace"}
spec:
  gateways:
  # WARNING: THE GATEWAY WILL CHANGE IN LATER VERSIONS OF KUBEFLOW.
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        # The prefix must have a trailing slash
        # And when you navigate to the URL you must include the trailing slash.
        prefix: /vscode/label-bot-dev/jl-rasa/ # {"$kpt-set":"vscode-prefix"}
    rewrite:
      #uri: / # {"$kpt-set":"vscode-prefix"}
      uri: /
    route:
    - destination:
        host: jl-rasa.label-bot-dev.svc.cluster.local # {"$kpt-set":"vscode-host"}
        port:
          number: 8080
    timeout: 300s
    websocketUpgrade: true
